--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -16,7 +16,7 @@ header{
       z-index: 1000;
       width: 10rem;
       height: 10rem;
-      background: url('/public/assets/images/logo.png');
+      background: url('/public/assets/images/logos/fefu.svg');
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
