--- a/src/style/index.css
+++ b/src/style/index.css
@@ -304,7 +304,7 @@ header .wrapper .logo {
   z-index: 1000;
   width: 10rem;
   height: 10rem;
-  background: url("/public/assets/images/logo.png");
+  background: url("/public/assets/images/logos/fefu.svg");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
